# DeepTemplate-Tools

./: README.md  pyproject.toml
.github/workflow/ISSUE_TEMPLATE/: bug-report---.md
.github/workflows/: deep-build.yml  deep-publish.yml  deep-test.yml
example_environment/example_module/: example_script.py
tests/: test_example_environment.py
tests/example_module/: test_example_script.py
