[tool.poetry]
name = "example-environment"
version = "0.1.0"
license = "Apache-2.0"
description = "A short description of your library"
authors = ["Name <email_address>",]
homepage = "url/to/the/webpage"
repository = "url/to/the/github/repo"
documentation = "url/to/the/documentation"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
